# solana-accountsdb-connector

./: Cargo.toml
.github/workflows/: release.yml  test.yml
ci/: rust-version.sh
connector-mango/: Cargo.toml
connector-raw/: Cargo.toml  example-config.toml
connector-raw/scripts/: create_schema.sql
geyser-grpc-public/: Cargo.toml  README.md  build.rs  config.json
geyser-grpc-public/src/: filters.rs  grpc.rs  prom.rs
geyser-plugin-grpc/: Cargo.toml  build.rs  example-config.json
geyser-plugin-grpc/src/: accounts_selector.rs  geyser_plugin_grpc.rs  lib.rs  plugin.rs  prom.rs  prom_metrics.rs  service.rs  test_server.rs
lib/: Cargo.toml
lib/src/: grpc_plugin_source.rs  lib.rs  postgres_target.rs  websocket_source.rs
proto/: geyser-public.proto  geyser.proto
